--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Bug Fixes]
+  - Specified a minimum version of Types::Const.
 
 v0.1.0    2018-11-10 00:25:46+00:00 Europe/London
   - Initial release.
