--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Bug Fixes]
+  - Actually set the coercion.
 
 v0.1.1    2018-11-10 00:28:47+00:00 Europe/London
   [Bug Fixes]
