Remove some redundant dependencies
Carp is core, and Moo::Role is not likely to be split from Moo
any time soon.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Toolchain]
+  - Removed some redundant dependencies.
 
 v0.1.2    2018-11-10 01:30:19+00:00 Europe/London
   [Bug Fixes]
