--- a/Changes
+++ b/Changes
@@ -4,6 +4,9 @@ Revision history for {{ $dist->name }}:
   [Toolchain]
   - Removed some redundant dependencies.
 
+  [Other]
+  - Bumped minimum version of Types::Const.
+
 v0.1.2    2018-11-10 01:30:19+00:00 Europe/London
   [Bug Fixes]
   - Actually set the coercion.
