--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Documentation]
+  - Fixed typo.
 
 v0.1.3    2018-11-10 12:23:52+00:00 Europe/London
   [Documentation]
