--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Revision history for {{ $dist->name }}:
   [Enhancements]
   - Add support for write-once attributes.
 
+  - Dies if a trigger is added to a constant attribute.
+
   [Documentation]
   - Updated ABSTRACT and POD accordingly.
 
