--- a/Changes
+++ b/Changes
@@ -4,6 +4,9 @@ Revision history for {{ $dist->name }}:
   [Incompatable Changes]
   - Removed support for Perls before v5.10.1.
 
+  [Tests]
+  - Added more tests.
+
 v0.2.2    2018-12-06 18:00:47+00:00 Europe/London
   [Other]
   - Added recommended minimum version of Types::Const.
