Remove prereq for Safe::Isa
We can use the core Scalar::Util module instead.

--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
   [Other]
-  - Removed unnecessary prerequisite.
+  - Removed unnecessary prerequisites.
 
 v0.3.0    2019-04-02 18:35:06+01:00 Europe/London
   [Incompatable Changes]
