--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Documentation]
+  - Bump copyright year.
 
 v0.4.0    2019-11-15 17:54:30+00:00 Europe/London
   [Enhancements]
