--- a/Changes
+++ b/Changes
@@ -9,6 +9,9 @@ Revision history for {{ $dist->name }}:
   [Tests]
   - Added tests with Moose.
 
+  [Other]
+  - Added MooX::TypeTiny and Moose as recommended test modules.
+
 v0.4.2    2020-01-04 12:59:01+00:00 Europe/London
   [Tests]
   - Fix MooX::TypeTiny test to bail out if MooX::TypeTiny missing, #1.
