Add note to KNOWN ISSUES about working with Mouse
Currently, it does not seem to work with Mouse.

--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
   [Documentation]
-  - Added a note about using with Moose.
+  - Added a note about using with Moose and Mouse.
 
   - Added link to Types::Const in KNOWN ISSUES.
 
