--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Toolchain]
+  - Add core modules in the prerequisites.
 
 v0.4.3    2020-01-10 12:08:40+00:00 Europe/London
   [Documentation]
