--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Revision history for {{ $dist->name }}:
   [Documentation]
   - Bumped copyright year.
 
+  - Fix encoding of links in README.
+
 v0.5.1    2021-06-21 16:47:46+01:00 Europe/London
   [Documentation]
   - Bumped copyright year.
