Wrap type coercions, fixes #4

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Bug Fixes]
+  - Wrap coercions, fixes GH#4.
+
   [Documentation]
   - Bumped copyright year.
 
