--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Revision history for {{ $dist->name }}:
   [Other]
   - Sign distribution.
 
+  - Update MANIFEST.SKIP.
+
 v0.5.3    2022-04-03 17:42:59+01:00 Europe/London
   [Bug Fixes]
   - Writers will throw errors, unless it is a write-once attribute.
