--- a/Changes
+++ b/Changes
@@ -6,6 +6,9 @@ Revision history for {{ $dist->name }}:
 
   - Updated the copyright year.
 
+  [Tests]
+  - Added more author tests.
+
 v0.6.2    2023-05-15 19:01:45+01:00 Europe/London
   [Documentation]
   - Documented support policy for older Perls.
