--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Bug Fixes]
+  - Fixed module prerequisite metadata.
 
 v0.6.3    2025-05-18 12:04:50+01:00 Europe/London
   [Documentation]
