--- a/Changes
+++ b/Changes
@@ -4,6 +4,9 @@ Revision history for {{ $dist->name }}:
   [Bug Fixes]
   - Fixed module prerequisite metadata.
 
+  [Tests]
+  - Improved author tests.
+
 v0.6.3    2025-05-18 12:04:50+01:00 Europe/London
   [Documentation]
   - Updated the SEE ALSO section.
