--- a/Changes
+++ b/Changes
@@ -7,6 +7,9 @@ Revision history for {{ $dist->name }}:
   [Tests]
   - Improved author tests.
 
+  [Toolchain]
+  - Improved Dist::Zilla configuration.
+
 v0.6.3    2025-05-18 12:04:50+01:00 Europe/London
   [Documentation]
   - Updated the SEE ALSO section.
