--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Enhancements]
+  - Internal code improvements.
+
   [Documentation]
   - Fixed cut-and-paste error in CONTRIBUTING.md.
 
